[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pdm-dotenv"
description = "A pdm plugin that automatically loads .env files"
authors = [{ name = "Zane Dufour", email = "zane@znd4.me" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["pdm>=2.5.2", "python-dotenv>=1.0.0"]
dynamic = ["version"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]

[project.entry-points.pdm]
dotenv = "pdm_dotenv:plugin"

[project.urls]
Repository = "https://github.com/zdog234/pdm-dotenv"
Homepage = "https://github.com/zdog234/pdm-dotenv"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "pytest>=6.1",
    "pdm[pytest]>=2.5.2",
    "pytest-cov>=4.0.0",
    "python-dotenv[cli]",
    "toml",
]

scripts.test = "pytest {args:tests}"
scripts.test-cov = "pytest --cov=src {args:tests}"
scripts.cov = "hatch run test-cov {args:tests} --cov-report=xml"

[tool.hatch.envs.docs]
dependencies = ["mkdocs>=1.1", "mkdocs-material>=6.2"]
scripts.serve = "mkdocs serve"
scripts.build = "mkdocs build"

[tool.hatch.envs.local]
extra-dependencies = ["pdbpp", "pre-commit"]
pre-install-commands = ["pre-commit install"]

[tool.hatch.envs.neovim]
template = "local"
extra-dependencies = ["pynvim"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]


[tool.pdm.scripts]
post_install = [
    "python",
    "-c",
    "import shutil, subprocess as sp; sp.check_call(['pre-commit', 'install']) if shutil.which('pre-commit') else None",
]
release = "python -m tasks.release"
test = "nox --no-venv -s test -- {args}"
cov = "nox -s cov -- {args}"
doc = { shell = "cd docs && mkdocs serve", help = "Start the dev server for doc preview" }
lint = "pre-commit run --all-files"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
select = [
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle
    "F",   # pyflakes
    "PGH", # pygrep-hooks
    "RUF", # ruff
    "W",   # pycodestyle
    "YTT", # flake8-2020
]
extend-ignore = ["B018", "B019"]
src = ["src"]
extend-exclude = ["tests/fixtures"]
target-version = "py38"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
known-first-party = ["pdm_dotenv"]

[tool.mypy]
follow_imports = "silent"
ignore_missing_imports = true
disallow_incomplete_defs = true
check_untyped_defs = false
disallow_untyped_decorators = true
namespace_packages = true
mypy_path = "src"
explicit_package_bases = true

[tool.towncrier]
package = "pdm_dotenv"
filename = "CHANGELOG.md"
issue_format = "[#{issue}](https://github.com/zdog234/pdm-dotenv/issues/{issue})"
directory = "news/"
start_string = "<!-- insertion marker -->"
title_format = "[v{version}](https://github.com/zdog234/pdm-dotenv/releases/tag/{version}) ({project_date})"
template = "news/towncrier_template.md"
underlines = "-~^"

[[tool.towncrier.type]]
directory = "feature"
name = "Features & Improvements"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "Bug Fixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Improved Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "dep"
name = "Dependencies"
showcontent = true

[[tool.towncrier.type]]
directory = "removal"
name = "Removals and Deprecations"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellany"
showcontent = true

[tool.isort]
profile = "black"
atomic = true
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = ["pdm_dotenv"]

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning"]
